Make types immutable, refractor locations score calculator, align field names, flatten elasticsearch model.
