# dtos/locationWithScoreDto.ts
@@ -1,0 +1,8 @@
+export class LocationWithScoreDto {
+    constructor(
+        readonly latitude: number,
+        readonly longitude: number,
+        readonly timeFrom: Date,
+        readonly timeTo: Date,
+        readonly score: number) { }
+}
